--- a/tests/visual_tests/column_row_spec_pdf.Rmd
+++ b/tests/visual_tests/column_row_spec_pdf.Rmd
@@ -42,7 +42,7 @@ dt <- data.frame(
 kable(dt, "latex", booktabs = T, align = "r") %>%
   column_spec(2, "3cm", bold = T) %>%
   column_spec(3, monospace = T)%>%
-  column_spec(4, "3cm", italic = T)  %>%
-  row_spec(3, monospace = T)
+  column_spec(4, "3cm", italic = T, color = "red")  %>%
+  row_spec(3, monospace = T, color = "yellow", background = "black")
 ```
 
