--- a/tests/visual_tests/column_row_spec_html.Rmd
+++ b/tests/visual_tests/column_row_spec_html.Rmd
@@ -40,8 +40,8 @@ dt <- data.frame(
 kable(dt, "html") %>%
   kable_styling(full_width = F)   %>%
   row_spec(1, bold = T) %>%
-  column_spec(2, "5cm", bold = T, color = "white", background = "red") %>%
-  column_spec(3, monospace = T) %>%
+  column_spec(2, "5cm", bold = T, color = "white", background = "gray") %>%
+  column_spec(3, monospace = T, border_right = T) %>%
   column_spec(4, "3cm", italic = T)
 ```
 
