--- a/vignettes/awesome_table_in_pdf.Rmd
+++ b/vignettes/awesome_table_in_pdf.Rmd
@@ -181,7 +181,7 @@ text_tbl <- data.frame(
 
 kable(text_tbl, format = "latex", booktabs = T) %>%
   kable_styling(full_width = F) %>%
-  column_spec(1, bold = T) %>%
+  column_spec(1, bold = T, color = "red") %>%
   column_spec(2, width = "30em")
 ```
 
@@ -191,8 +191,8 @@ Similar with `column_spec`, you can define specifications for rows. Currently, y
 ```{r}
 kable(dt, format = "latex", booktabs = T) %>%
   kable_styling("striped", full_width = F) %>%
-  column_spec(7, bold = T) %>%
-  row_spec(5, bold = T)
+  column_spec(7, border_left = T) %>%
+  row_spec(5, bold = T, color = "white", background = "black")
 ```
 
 # Grouped Columns / Rows
