add feature for issue #69

--- a/tests/visual_tests/longtable.Rmd
+++ b/tests/visual_tests/longtable.Rmd
@@ -25,7 +25,8 @@ dt <- rbind(mtcars[1:30,], mtcars)
 
 ```{r}
 kable(dt, "latex", longtable = T, caption = "test", booktabs = T, caption.short = "sss") %>%
-  kable_styling(latex_options = c("striped", "repeat_header"), repeat_header_text = "(...)")
+  kable_styling(latex_options = c("striped", "repeat_header"), 
+                repeat_header_text = "(...)", repeat_header_continued = T)
 ```
 
 ```{r}
