--- a/tests/visual_tests/column_row_spec_pdf.Rmd
+++ b/tests/visual_tests/column_row_spec_pdf.Rmd
@@ -39,10 +39,11 @@ dt <- data.frame(
   )
 )
 
-kable_input <- kable(dt, "latex", booktabs = T, align = "r") %>%
+kable(dt, "latex", booktabs = T, align = "r") %>%
   column_spec(2, "3cm", bold = T, border_right = T) %>%
   column_spec(3, monospace = T)%>%
   column_spec(4, "3cm", italic = T, color = "red", border_left = T, background = "blue")  %>%
+  row_spec(0, bold = T, italic = T, align = "l") %>%
   row_spec(3, monospace = T, color = "yellow", background = "black")
 ```
 
