--- a/tests/visual_tests/cell_spec_pdf.Rmd
+++ b/tests/visual_tests/cell_spec_pdf.Rmd
@@ -12,14 +12,12 @@ library(dplyr)
 ```
 
 ```{r}
-mtcars[1:25, 1:5] %>%
-  mutate(
-    mpg = ifelse(mpg > 21, 
-                 cell_spec(mpg, "latex", color = "green", bold = T),
-                 cell_spec(mpg, "latex", color = "red", italic = T)),
-    disp = cell_spec(disp, "latex", background = spec_color(disp), 
-                     color = "white", bold = T)
-  ) %>%
-  kable("latex", escape = F, booktabs = T) %>%
-  row_spec(0, angle = 90)
+iris[1:10, 1:4] %>%
+  mutate_all(function(x){
+    cell_spec(x, "latex", 
+              background = spec_color(x), 
+              font_size = spec_font_size(x),
+              color = "white", bold = T)
+    }) %>%
+  kable("latex", escape = F, booktabs = T, linesep = "", align = "c") 
 ```
